changes for successful build