@@ -81,6 +81,10 @@
     <maven-release-plugin.version>2.5.2</maven-release-plugin.version>
     <rpm-maven-plugin.version>2.1.4</rpm-maven-plugin.version>
 
+    <!-- java 11 -->
+    <javax-xml.version>2.4.0-b180725.0427</javax-xml.version>
+    <javax-annotation.version>1.3.2</javax-annotation.version>
+
   </properties>
 
   <dependencyManagement>
@@ -460,6 +464,18 @@
         <version>${logstash-logback.version}</version>
       </dependency>
 
+      <dependency>
+        <groupId>javax.xml.bind</groupId>
+        <artifactId>jaxb-api</artifactId>
+        <version>${javax-xml.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>javax.annotation</groupId>
+        <artifactId>javax.annotation-api</artifactId>
+        <version>${javax-annotation.version}</version>
+      </dependency>
+
     </dependencies>
 
   </dependencyManagement>
@@ -516,6 +532,16 @@
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>jcl-over-slf4j</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>javax.xml.bind</groupId>
+      <artifactId>jaxb-api</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>javax.annotation</groupId>
+      <artifactId>javax.annotation-api</artifactId>
     </dependency>
 
   </dependencies>
@@ -584,6 +610,9 @@
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <target>1.8</target>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -602,12 +631,12 @@
             <configuration>
               <rules>
                 <requireMavenVersion>
-                  <message>You are running an older version of Maven. Mica requires at least Maven 3.0</message>
-                  <version>[3.0.0,)</version>
+                  <message>You are running an older version of Maven. Mica requires at least Maven 3.5</message>
+                  <version>[3.5.0,)</version>
                 </requireMavenVersion>
                 <requireJavaVersion>
-                  <message>You are running an older version of Java. Mica requires at least JDK 1.7</message>
-                  <version>[1.7.0,)</version>
+                  <message>You are running an older version of Java. Mica requires at least JDK 1.8</message>
+                  <version>[1.8.0,)</version>
                 </requireJavaVersion>
               </rules>
             </configuration>
@@ -620,7 +649,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <useSystemClassLoader>false</useSystemClassLoader>
-          <argLine>-XX:MaxPermSize=128m -Xmx256m</argLine>
+          <argLine>-XX:MaxPermSize=128m -Xmx256m --illegal-access=permit</argLine>
           <forkCount>1</forkCount>
           <reuseForks>false</reuseForks>
           <!-- Force alphabetical order to have a reproducible build -->
@@ -700,6 +729,7 @@
             </goals>
             <configuration>
               <additionalparam>-Xdoclint:none</additionalparam>
+              <source>8</source>
             </configuration>
           </execution>
         </executions>
